--- a/REDCapSync.Rmd
+++ b/REDCapSync.Rmd
@@ -36,17 +36,12 @@ library(kableExtra)
 ```
 
 # Introduction 
-<!-- #REDCapSync <a href="https://github.com/thecodingdocs/REDCapSync/"><img src="figures/REDCapSync.png" align="right" height="80" width="70"/></a> -->
+
+REDCapSync <a href="https://github.com/thecodingdocs/REDCapSync/"><img src="figures/REDCapSync.png" align="right" height="80" width="70"/></a>
 
 ```{r redcapsync-logo, out.width = "25%", out.height = "25%", fig.cap = "REDCapSync: Encapsulated REDCap projects for pipelines, functions, and applications in R"}
 knitr::include_graphics("figures/REDCapSync.png")
 ```
-
-The REDCap API is so cool.
-\CRANpkg{REDCapR}
-\CRANpkg{redcapAPI}
-
-Enter REDCapSync ...
 
 # Abstract
 - Brief description of REDCap as a dominant data capture platform in clinical research  
@@ -64,6 +59,8 @@ Enter REDCapSync ...
 Some REDCap API packages include \CRANpkg{REDCapR} and \CRANpkg{redcapAPI}...
 
 One of the reasons people do not choose more complicated structures in REDCap, such as repeating instruments is the data exports require a manual or automated process to merge the data into a usable format. For example if you have non-repeating data in one form...
+
+Enter REDCapSync ...
 
 ## REDCap in Clinical and Translational Research  
 - Widespread use of REDCap for:
