--- a/REDCapSync.tex
+++ b/REDCapSync.tex
@@ -12,15 +12,11 @@ Many R packages exist for working with the various API endpoints but none have b
 
 \section{Introduction}\label{introduction}
 
+REDCapSync
+
 \begin{figure}
 \includegraphics[width=0.25\linewidth,height=0.25\textheight]{figures/REDCapSync} \caption{REDCapSync: Encapsulated REDCap projects for pipelines, functions, and applications in R}\label{fig:redcapsync-logo}
 \end{figure}
-
-The REDCap API is so cool.
-\CRANpkg{REDCapR}
-\CRANpkg{redcapAPI}
-
-Enter REDCapSync \ldots{}
 
 \section{Abstract}\label{abstract}
 
@@ -55,6 +51,8 @@ Enter REDCapSync \ldots{}
 Some REDCap API packages include \CRANpkg{REDCapR} and \CRANpkg{redcapAPI}\ldots{}
 
 One of the reasons people do not choose more complicated structures in REDCap, such as repeating instruments is the data exports require a manual or automated process to merge the data into a usable format. For example if you have non-repeating data in one form\ldots{}
+
+Enter REDCapSync \ldots{}
 
 \subsection{REDCap in Clinical and Translational Research}\label{redcap-in-clinical-and-translational-research}
 
