--- a/REDCapSync.tex
+++ b/REDCapSync.tex
@@ -10,14 +10,6 @@
 Many R packages exist for working with the various API endpoints but none have been established for an encapsulated ``get-everything'' work flow that produces a standardized R object. REDCapSync accomplishes this and can serve as a dynamic input object for downstream functions.
 }
 
-\section{Introduction}\label{introduction}
-
-REDCapSync
-
-\begin{figure}
-\includegraphics[width=0.25\linewidth,height=0.25\textheight]{figures/REDCapSync} \caption{REDCapSync: Encapsulated REDCap projects for pipelines, functions, and applications in R}\label{fig:redcapsync-logo}
-\end{figure}
-
 \section{Abstract}\label{abstract}
 
 \begin{itemize}
@@ -46,9 +38,13 @@ REDCapSync
   Summary of current capabilities and future roadmap (bi-directional sync)
 \end{itemize}
 
-\section{Introduction}\label{introduction-1}
+\section{Introduction}\label{introduction}
 
-Some REDCap API packages include \CRANpkg{REDCapR} and \CRANpkg{redcapAPI}\ldots{}
+\begin{figure}
+\includegraphics[width=0.45\linewidth,height=0.25\textheight]{figures/REDCapSync} \caption{REDCapSync: Encapsulated REDCap projects for pipelines, functions, and applications in R}\label{fig:redcapsync-logo}
+\end{figure}
+
+Some REDCap API packages include \CRANpkg{REDCapR}, \CRANpkg{redcapAPI}, \CRANpkg{tidyREDCap}\ldots{}
 
 One of the reasons people do not choose more complicated structures in REDCap, such as repeating instruments is the data exports require a manual or automated process to merge the data into a usable format. For example if you have non-repeating data in one form\ldots{}
 
